--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
-    "lit": "^3.3.1"
+    "@reduxjs/toolkit": "^2.10.1",
+    "lit": "^3.3.1",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   }
 }
