Read games list from sqlite steam 250 snapshot

--- a/api/package.json
+++ b/api/package.json
@@ -9,13 +9,19 @@
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["express", "steam", "api"],
+  "keywords": [
+    "express",
+    "steam",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/sqlite3": "^3.1.11",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
