--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Frontend for Steam Reviews Game",
   "scripts": {
-    "build": "webpack -c ./webpack.config.js",
+    "build": "NODE_ENV=production webpack --mode production -c ./webpack.config.js",
     "dev": "webpack serve --mode development -c ./webpack.config.js",
     "watch": "webpack --watch -c ./webpack.config.js"
   },
