--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/levenshtein": "^1.0.4",
     "@types/node": "^24.10.0",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.1",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
+    "levenshtein": "^1.0.5",
     "lit": "^3.3.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
