--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --mode production -c ./webpack.config.js",
     "dev": "webpack serve --mode development -c ./webpack.config.js",
-    "watch": "webpack --watch -c ./webpack.config.js"
+    "watch": "webpack --watch -c ./webpack.config.js",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +20,14 @@
     "@types/node": "^24.10.0",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.1",
+    "@vitest/coverage-v8": "^4.0.10",
+    "@vitest/ui": "^4.0.10",
     "html-webpack-plugin": "^5.6.4",
+    "jsdom": "^27.2.0",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
+    "vitest": "^4.0.10",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^4.15.2"
